<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/extra_large_widget_spacing"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_forgot_pswd" />

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/larger_widget_spacing"
                android:gravity="center"
                android:text="@string/forgot_password"
                android:textColor="@color/text_color"
                android:textSize="@dimen/normal_text_size"
                android:textStyle="bold" />
        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/et_forgot_pswd_email_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/extra_large_widget_spacing"
                android:hint="@string/email_hint" />
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/reset_msg"
            android:textColor="@color/text_color" />

    </LinearLayout>

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/tv_forgot_pswd_login_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/btn_forgot_pswd_next"
        android:layout_marginBottom="@dimen/basic_widget_spacing"
        android:gravity="center"
        android:textStyle="bold"
        android:text="@string/forget_pswd_login_link" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_forgot_pswd_next"
        style="@style/BottomButtonStyle"
        android:text="@string/next" />

</RelativeLayout>