<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/verification_msg1"
            android:textColor="@color/text_color"
            android:textSize="@dimen/large_text_size"
            android:textStyle="bold" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_verification_mailId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large_widget_spacing"
            android:gravity="center"
            android:text="adad"
            android:textColor="@color/colorBlue"
            android:textSize="@dimen/large_text_size" />

        <android.support.v7.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/extra_large_widget_spacing"
            android:src="@drawable/ic_check_mark" />

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/verification_msg2"
            android:textColor="@color/text_color"
            android:textSize="@dimen/large_text_size"
            android:textStyle="bold" />

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/extra_large_widget_spacing"
            android:gravity="center"
            android:text="@string/verification_msg3"
            android:textColor="@color/text_color"
            android:textSize="@dimen/medium_text_size" />
    </LinearLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_verification_continue"
        style="@style/BottomButtonStyle"
        android:text="@string/continues" />
</RelativeLayout>